objects/APTS_Configurator_Section__c.object
<CustomObject>
    <description>To manage reference no. wise unique section information for Local Configurator functionality.</description>
    <fields>
        <fullName>APTS_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to store Agreement id</description>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Configurator Sections</relationshipLabel>
        <relationshipName>Configurator_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Section_Total__c</fullName>
        <formula>APTS_Section_Count__c  *  APTS_Section_Total__c</formula>
        <label>Net Section Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Net_price_By_Envolvente_EUR__c</fullName>
        <formula>IF( 
APTS_Net_price_by_Envolvente__c&gt;= 1000000, 
TEXT(FLOOR(APTS_Net_price_by_Envolvente__c/ 1000000)) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
IF( 
APTS_Net_price_by_Envolvente__c&gt;= 1000, 
RIGHT(TEXT(FLOOR(APTS_Net_price_by_Envolvente__c/ 1000)), 3) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(APTS_Net_price_by_Envolvente__c)), 3) &amp; &quot;,&quot; &amp; 
IF( 
MOD(APTS_Net_price_by_Envolvente__c, 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD(APTS_Net_price_by_Envolvente__c, 1), 2) * 100), 
TEXT(MIN(ROUND(MOD(APTS_Net_price_by_Envolvente__c, 1), 2) * 100, 99)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net price By Envolvente EUR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Net_price_By_GTV_EUR__c</fullName>
        <formula>IF( 
APTS_Net_price_by_GTV__c &gt;= 1000000, 
TEXT(FLOOR(APTS_Net_price_by_GTV__c/ 1000000)) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
IF( 
APTS_Net_price_by_GTV__c &gt;= 1000, 
RIGHT(TEXT(FLOOR(APTS_Net_price_by_GTV__c/ 1000)), 3) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(APTS_Net_price_by_GTV__c)), 3) &amp; &quot;,&quot; &amp; 
IF( 
MOD(APTS_Net_price_by_GTV__c, 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD(APTS_Net_price_by_GTV__c, 1), 2) * 100), 
TEXT(MIN(ROUND(MOD(APTS_Net_price_by_GTV__c, 1), 2) * 100, 99)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net price By GTV EUR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Net_price_by_Envolvente__c</fullName>
        <label>Net price by Envolvente</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Net_price_by_GTV__c</fullName>
        <label>Net price by GTV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Configurator Sections</relationshipLabel>
        <relationshipName>Configurator_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Reference_Number__c</fullName>
        <description>To identify section details for an Agreement or a Quote</description>
        <label>Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Section_Count_Total__c</fullName>
        <description>This field is used to calculate the total Section Net Sales Price based on section count</description>
        <formula>IF( 
(( Base_Price__c )*APTS_Section_Count__c)&gt;= 1000000, 
TEXT(FLOOR((( Base_Price__c )*APTS_Section_Count__c)/ 1000000)) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
IF( 
(( Base_Price__c )*APTS_Section_Count__c)&gt;= 1000, 
RIGHT(TEXT(FLOOR((( Base_Price__c )*APTS_Section_Count__c) / 1000)), 3) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR((( Base_Price__c )*APTS_Section_Count__c))), 3) &amp; &quot;,&quot; &amp; 
IF( 
MOD((( Base_Price__c )*APTS_Section_Count__c), 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD((( Base_Price__c )*APTS_Section_Count__c), 1), 2) * 100), 
TEXT(MIN(ROUND(MOD((( Base_Price__c )*APTS_Section_Count__c), 1), 2) * 100, 99)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Section Count Total</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Section_Count__c</fullName>
        <description>This field is created to store section count information and display it on template. this was created in R4 maintenance</description>
        <label>Section Count</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Section_Name__c</fullName>
        <description>Name of a section for an Agreement or a Quote</description>
        <label>Section Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Section_Total__c</fullName>
        <formula>APTS_Net_price_by_Envolvente__c +  ROUND(APTS_Net_price_by_GTV__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Section Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Net_Price_EUR__c</fullName>
        <formula>IF( 
APTS_Total_Net_Price__c&gt;= 1000000, 
TEXT(FLOOR(APTS_Total_Net_Price__c/ 1000000)) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
IF( 
APTS_Total_Net_Price__c&gt;= 1000, 
RIGHT(TEXT(FLOOR(APTS_Total_Net_Price__c / 1000)), 3) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(APTS_Total_Net_Price__c)), 3) &amp; &quot;,&quot; &amp; 
IF( 
MOD(APTS_Total_Net_Price__c, 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD(APTS_Total_Net_Price__c, 1), 2) * 100), 
TEXT(MIN(ROUND(MOD(APTS_Total_Net_Price__c, 1), 2) * 100, 99)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Net Price EUR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Net_Price__c</fullName>
        <label>Total Net Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Net_Unit_Price__c</fullName>
        <label>Total Net Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Updating_Total_Net_Price__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Technical field that is used for showing/hiding warning message on Quote Preview when Total Net Price is being updating. Reverse logic is used on purpose, so it works also for existing records.</description>
        <label>Updating Total Net Price</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AUT__c</fullName>
        <label>AUT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attachment_List__c</fullName>
        <label>Attachment List</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Base_Price_EUR__c</fullName>
        <formula>IF( 
Base_Price__c&gt;= 1000000, 
TEXT(FLOOR(Base_Price__c/ 1000000)) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
IF( 
Base_Price__c&gt;= 1000, 
RIGHT(TEXT(FLOOR(Base_Price__c / 1000)), 3) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Base_Price__c)), 3) &amp; &quot;,&quot; &amp; 
IF( 
MOD(Base_Price__c, 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD(Base_Price__c, 1), 2) * 100), 
TEXT(MIN(ROUND(MOD(Base_Price__c, 1), 2) * 100, 99)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Price EUR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Price__c</fullName>
        <label>Base Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Carpenteria__c</fullName>
        <label>Carpenteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clarification__c</fullName>
        <label>Clarification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dimension__c</fullName>
        <label>Dimension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Display Hierarchy</label>
        <referenceTo>Display_Hierarchy__c</referenceTo>
        <relationshipLabel>Configurator Sections</relationshipLabel>
        <relationshipName>Configurator_Sections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exclusions__c</fullName>
        <label>Exclusions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Explanation__c</fullName>
        <label>Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Forma__c</fullName>
        <label>Forma</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Exclusions__c</fullName>
        <label>General Exclusion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>General_Notes__c</fullName>
        <label>General Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IND__c</fullName>
        <label>IND</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IP__c</fullName>
        <label>IP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Montaggio__c</fullName>
        <label>Montaggio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Section_Total_EUR__c</fullName>
        <formula>IF( 
(APTS_Section_Count__c * APTS_Section_Total__c) &gt;= 1000000, 
TEXT(FLOOR((APTS_Section_Count__c * APTS_Section_Total__c) / 1000000)) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
IF( 
(APTS_Section_Count__c * APTS_Section_Total__c) &gt;= 1000, 
RIGHT(TEXT(FLOOR((APTS_Section_Count__c * APTS_Section_Total__c) / 1000)), 3) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(APTS_Section_Count__c * APTS_Section_Total__c)), 3) &amp; &quot;,&quot; &amp; 
IF( 
MOD(APTS_Section_Count__c * APTS_Section_Total__c, 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD(APTS_Section_Count__c * APTS_Section_Total__c, 1), 2) * 100), 
TEXT(MIN(ROUND(MOD(APTS_Section_Count__c * APTS_Section_Total__c, 1), 2) * 100, 99)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Section Total EUR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposal_Description_from_e_Design__c</fullName>
        <label>Proposal Description from e-Design</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RES__c</fullName>
        <label>RES</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Configurator Section</label>
    <nameField>
        <displayFormat>CS-{0000000000}</displayFormat>
        <label>Configurator Section Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configurator Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>